--- a/src/css/ContentHeaders.css
+++ b/src/css/ContentHeaders.css
@@ -11,6 +11,7 @@
 
 #proj {
   margin-left: 8em;
+  padding-top: 5vh;
 }
 .container a:hover {
   color: rgb(105, 105, 105);
